tests/baselines/reference/parser521128.errors.txt
==== tests/cases/compiler/parser521128.ts (2 errors) ====
    module.module { }
                  ~
!!! parser521128.ts(1,15): error TS1005: ';' expected.
    ~~~~~~
!!! parser521128.ts(1,1): error TS2095: Cannot find name 'module'.